@@ -5,7 +5,8 @@ Changelog
 1.11.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Allow SiteAdministrator to add files.
+  [tschanzt]
 
 
 1.11.4 (2016-01-27)
